[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Death.gd" type="Script" id=1]
[ext_resource path="res://other/wasted.png" type="Texture" id=2]
[ext_resource path="res://other/ponów1.png" type="Texture" id=3]
[ext_resource path="res://other/ponów2.png" type="Texture" id=4]
[ext_resource path="res://other/wyjście1.png" type="Texture" id=5]
[ext_resource path="res://other/wyjście2.png" type="Texture" id=6]

[node name="Death" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1025.0
margin_bottom = 601.0
color = Color( 0.984314, 0.968627, 0.968627, 0.301961 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 274.735
margin_top = 141.051
margin_right = 774.735
margin_bottom = 241.051
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 495.0
margin_top = 235.0
margin_right = 1023.0
margin_bottom = 599.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 528.0
margin_bottom = 364.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 14.0
margin_top = 80.0
margin_right = 514.0
margin_bottom = 284.0

[node name="TextureButton" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 500.0
margin_bottom = 100.0
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 4 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 500.0
margin_bottom = 204.0
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 6 )
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
